--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="assets/unpluggedlogo.png" alt="unplugged logo"></a>
+      <figure>
+        <a href="#"><img src="assets/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -45,7 +47,6 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed</h1>
-        <img src="assets/hero-image.jpg" alt="">
       </div>
     </section>
    
@@ -106,6 +107,9 @@
       <div class="content-wrapper">
           <h2>Be a better team in 5 days, like these.</h2>
         <article>
+          <figure>
+            <img src="assets/group-picture.jpg" alt="groupe picture at outdoor retreat">
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
