--- a/about/index.html
+++ b/about/index.html
@@ -92,10 +92,9 @@
             </div>
               <div class="social">
                   <div class="social-icons">
-                      <p><a href="https://www.facebook.com" target="_blank"></a></p>
-                      <p><a href="https://www.twitter.com" target="_blank"></a></p>
-                      <p><a href="https://www.instagram.com" target=_blank></a></p>
-                      <!-- other social links here --> 
+                    <p><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></p>
+                    <p><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></p>
+                    <p><a href="https://www.instagram.com" target=_blank><i class="fab fa-instagram"></i></a></p>
                   </div>
               </div>
           </div> <!-- footer content ends --> 
