--- a/about/index.html
+++ b/about/index.html
@@ -31,12 +31,12 @@
 
     <header>
         <div class="content-wrapper">
-          <a href="#"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
+          <a href="../index.html"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
           <div class="header-divider"></div>
           <nav>
             <ul>
-              <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-              <li><a href="index.html" target="_blank">About</a></li>
+              <li><a href="../faq/index.html">FAQ</a></li>
+              <li><a href="index.html">About</a></li>
             </ul>
           </nav>
         </div>
@@ -61,7 +61,7 @@
         </section>
 
         <section class="contact-section">
-             <div class="contact-wrapper">
+             <div class="content-wrapper">
                <h2>Contact us, because you all need this.</h2>
                <address class="contact-content">
                  <div>
