--- a/faq/index.html
+++ b/faq/index.html
@@ -31,7 +31,9 @@
 
     <header>
         <div class="content-wrapper">
-          <a href="#"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
+          <figure>
+           <a href="../index.html"><img src="../assets/unpluggedlogo.png" alt="unplugged logo"></a>
+          </figure>
           <div class="header-divider"></div>
           <nav>
             <ul>
