--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"><img src="assets/unpluggedlogo.png" alt="unplugged logo"></a>
+        <a href="index.html"><img src="assets/unpluggedlogo.png" alt="unplugged logo"></a>
       </figure>
       <div class="header-divider"></div>
       <nav>
